--- a/people.html
+++ b/people.html
@@ -3,8 +3,8 @@ layout: default
 title: People
 
 picture-role-groups:
-- {roles: [faculty, postdoc, staff], width: 4}
-- {roles: [grad], width: 8}
+- {roles: [phd], width: 4}
+- {roles: [phd], width: 12}
 
 no-picture-role-groups:
 - {roles: [collab, ugrad, ugrad-alum], width: 5}
