--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [director]
-    width: 4
-    image: true
-  - roles: [faculty, affiliates]
-    width: 8
-    image: true
-- - roles: [phd]
-    width: 12
-    image: true
-- - roles: [ms]
-    width: 12
-    image: true
+ - - roles: [director]
+     image: true
+     width: 4
+   - roles: [faculty]
+     image: true
+     width: 4
+   - roles: [affiliated]
+     image: true
+     width: 4
+ - - roles: [phd]
+     width: 12
+     image: true
+ - - roles: [masters]
+     width: 12
+     image: true
 
 ---
 
